@@ -6,30 +6,31 @@
 		</area>
 		<area x="0" y="0" width="100%" height="100%" layer="1">
 			<drawimage condition="not{brightBackground}" x="0" width="{areawidth}" height="{areaheight}" imagetype="skinpart" path="gradientPNG" />
-			<drawimage condition="{brightBackground}" x="0" width="{areawidth}" height="{areaheight}" imagetype="skinpart" path="gradientPNGBright" />            
-			<drawrectangle  x="1%" y="59%" width="39%" height="39%" color="{clrTransparent}" />           
+			<drawimage condition="{brightBackground}" x="0" width="{areawidth}" height="{areaheight}" imagetype="skinpart" path="gradientPNGBright" />
+			<drawrectangle x="1%" y="59%" width="39%" height="39%" color="{clrTransparent}" />
 		</area>
 		<area x="0" y="0" width="100%" height="100%" layer="2">
-			<drawimage  x="0" width="{areawidth}" height="{areaheight}" imagetype="skinpart" path="shadowsMenuTVLB" />
-			<drawimage  x="0" y="39%" imagetype="skinpart" path="tabActive" width="{areawidth}*0.42" height="{areaheight}*0.1"/>          
+			<drawimage x="0" width="{areawidth}" height="{areaheight}" imagetype="skinpart" path="shadowsMenuTVLB" />
+			<drawrectangle x="0" y="39%" width="42%" height="10%" color="{clrTransparent}" />
+			<drawimage x="0" y="39%" imagetype="skinpart" path="tabActive" width="{areawidth}*0.42" height="{areaheight}*0.1"/>
 		</area>
 		<area x="0" y="0" width="100%" height="11%" layer="2">
-			<drawimage  x="0" width="{areawidth}*0.972" height="{areaheight}*0.972" imagetype="skinpart" path="gradientHeader" />           
+			<drawimage x="0" width="{areawidth}*0.972" height="{areaheight}*0.972" imagetype="skinpart" path="gradientHeader" />
 		</area>
 	</background>
 
 	<detailheader>
 		<area x="1%" y="13%" width="38%" height="35%" layer="3">
-			<drawtext name="title" x="0"  y="0" width="100%" font="{light}" align="center" fontsize="14%" color="{clrLightGray}" text="{epgname}"/>
-			<drawtext name="shorttext" x="0"  y="{posy(title)} + {height(title)}*1.2" width="100%" align="center" font="{light}" fontsize="12%" color="{clrLightGray}" text="{shorttext}"/>
-			<drawtext name="chandate" x="0"  y="{posy(shorttext)} + {height(shorttext)}*1.9" align="center" font="{light}" fontsize="12%" color="{clrLightGray}" text="{recchannelname} {printf('%02d.%02d.%04d', daynumeric, month, year)}"/>
-			<drawtext x="0"  y="{posy(chandate)} + {height(chandate)}*1.2" align="center" font="{light}" fontsize="12%" color="{clrLightGray}" text="{duration}min"/>
+			<drawtext name="title" x="0" y="0" width="100%" font="{light}" align="center" fontsize="14%" color="{clrLightGray}" text="{epgname}"/>
+			<drawtext name="shorttext" x="0" y="{posy(title)} + {height(title)}*1.2" width="100%" align="center" font="{light}" fontsize="12%" color="{clrLightGray}" text="{shorttext}"/>
+			<drawtext name="chandate" x="0" y="{posy(shorttext)} + {height(shorttext)}*1.9" align="center" font="{light}" fontsize="12%" color="{clrLightGray}" text="{recchannelname} {printf('%02d.%02d.%04d', daynumeric, month, year)}"/>
+			<drawtext x="0" y="{posy(chandate)} + {height(chandate)}*1.2" align="center" font="{light}" fontsize="12%" color="{clrLightGray}" text="{duration}min"/>
 		</area>
 	</detailheader>
 	
 	<scrollbar>
 		<area condition="lt({height},1000)" x="95%" y="15%" width="5%" height="73%" layer="3">
-			 <drawimage   x="0" y="0" width="{areawidth}" height="{areaheight}" imagetype="skinpart" path="shadowScrollSub" />
+			 <drawimage x="0" y="0" width="{areawidth}" height="{areaheight}" imagetype="skinpart" path="shadowScrollSub" />
 			 <drawimage x="15%" y="{areaheight} * {offset} / 1000" width="{areawidth}*0.1" height="{areaheight} * {height} / 1000" imagetype="skinpart" path="scrollBar" />
 		</area>
 	</scrollbar>
@@ -93,14 +94,16 @@
 		<drawimage condition="{movieiscollection}" name="collectionposter" imagetype="image" path="{collectionposterpath}" align="center" y="{posy(collectionfanart)} + {height(collectionfanart)} + 20" width="{areawidth}*0.6" height="{areawidth} * 0.6 * {collectionposterheight} / {collectionposterwidth}"/>
 	</tab>
 
-	<tablabels>
-		<area x="0" y="39%" width="41%" height="10%" layer="3">
-			<drawtext  x="0"  align="center" valign="center" width="{areawidth}" font="{light}" fontsize="60%" color="{clrLightGray}" text="{currenttab}" />
-		</area>        
-		<area x="0" y="48%" width="41%" height="10%" layer="3">
-			<drawimage  imagetype="skinpart" path="tabLow" width="{areawidth}" height="{areaheight}"/>
-			<drawtext x="5%" valign="center" width="{areawidth}/2" font="{light}" fontsize="35%" color="{clrLightGray}" text="{prevtab}" />
-			<drawtext x="{areawidth}/2"  align="right" valign="center" width="{areawidth}/2" font="{light}" fontsize="35%" color="{clrLightGray}" text="{nexttab}   "/>       
+		<tablabels>
+			<area x="0" y="39%" width="41%" height="10%" layer="3">
+			<drawtext x="0" align="center" valign="center" width="{areawidth}" font="{light}" fontsize="60%" color="{clrLightGray}" text="{currenttab}" />
+		</area>
+		<area x="0" y="48%" width="{areawidth}*0.41" height="10%" layer="3">
+			<drawimage y="5%" imagetype="skinpart" path="tabLow" width="{areawidth}" height="{areaheight}" />
+		</area>
+		<area x="2%" y="48%" width="{areawidth}*0.365" height="10%" layer="4">
+			<drawtext x="0" valign="center" width="{areawidth}/2" font="{light}" fontsize="45%" color="{clrLightGray}" text="{prevtab}" />
+			<drawtext x="{areawidth}/2" valign="center" align="right" width="{areawidth}/2" font="{light}" fontsize="45%" color="{clrLightGray}" text="{nexttab}"/>
 		</area>
 	</tablabels>
 </menudetailedrecording>
